[gd_scene load_steps=5 format=3 uid="uid://qocqt8rdx14k"]

[ext_resource type="Script" path="res://source/ui/pet_outro_ui.gd" id="1_4nlp0"]
[ext_resource type="Texture2D" uid="uid://r05oud0to665" path="res://assets/img/inventory-background.png" id="2_0vvje"]
[ext_resource type="Texture2D" uid="uid://bhfjprgp4pnof" path="res://assets/img/capybara.png" id="3_2gchu"]
[ext_resource type="Texture2D" uid="uid://d2i8wlqqqv23s" path="res://assets/img/coin.png" id="4_sqp3e"]

[node name="PetOutroUI" type="Control" groups=["PetIntroductionUI"]]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_4nlp0")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -223.0
offset_top = -122.0
offset_right = 223.0
offset_bottom = 122.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_0vvje")
region_rect = Rect2(0, 0, 16, 16)
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="ClaimButton" type="Button" parent="NinePatchRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = 67.5
offset_right = 60.0
offset_bottom = 98.5
grow_horizontal = 2
grow_vertical = 2
text = "Claim coins"

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -26.0
offset_bottom = -66.0
grow_horizontal = 2
grow_vertical = 2

[node name="PetImage" type="TextureRect" parent="NinePatchRect/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(86, 86)
layout_mode = 2
texture = ExtResource("3_2gchu")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="NameLabel" type="Label" parent="NinePatchRect/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "Name: Jeff"

[node name="AnimalLabel" type="Label" parent="NinePatchRect/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "Animal: Capybara"

[node name="StayLabel" type="Label" parent="NinePatchRect/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "Stay Duration: 1 day"

[node name="StatsLabel" type="Label" parent="NinePatchRect/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "Average Stats: 50%"

[node name="ReviewLabel" type="Label" parent="NinePatchRect/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Review:Once preloaded, you can access data from reviewsJSON just like a regular dictionary in GDScript, n"
autowrap_mode = 1

[node name="StarsContainer" type="HBoxContainer" parent="NinePatchRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -94.0
offset_right = 150.0
offset_bottom = -62.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 4
alignment = 1

[node name="StarRatingImage" type="TextureRect" parent="NinePatchRect/StarsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
texture = ExtResource("4_sqp3e")

[node name="StarRatingImage2" type="TextureRect" parent="NinePatchRect/StarsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
texture = ExtResource("4_sqp3e")
stretch_mode = 1

[node name="StarRatingImage3" type="TextureRect" parent="NinePatchRect/StarsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
texture = ExtResource("4_sqp3e")
stretch_mode = 1

[node name="StarRatingImage4" type="TextureRect" parent="NinePatchRect/StarsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
texture = ExtResource("4_sqp3e")
stretch_mode = 1

[node name="StarRatingImage5" type="TextureRect" parent="NinePatchRect/StarsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
texture = ExtResource("4_sqp3e")
stretch_mode = 1

[node name="CoinsLabel" type="Label" parent="NinePatchRect"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 4.0
offset_top = 192.0
offset_right = 304.0
offset_bottom = 214.0
theme_override_font_sizes/font_size = 15
text = "Coins rewarded: 10"

[connection signal="pressed" from="NinePatchRect/ClaimButton" to="." method="_on_continue_button_pressed"]
